[package]
name = "crl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
arw_brr = "0.1.0"
daemonize = "0.4.1"
dirs = "4.0.0"
rand = "0.8.5"
rusqlite = "0.28.0"
tokio = { version = "1.23.0", features = ["full"] }
